--- a/page-britanique.css
+++ b/page-britanique.css
@@ -25,7 +25,6 @@ img {
   border-radius: 6px;
 }
 
-
 .header {
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7)), URL("https://cdn.glitch.global/f5ce6009-1228-4be5-94bb-b3777fc53977/image4.webp?v=1740911983841");
   height: 300px;
@@ -122,7 +121,8 @@ td
 
 .link
 {
-  color:blue;
+  color: #0d83e5;
+  text-decoration: none;
 }
 
 table {
