--- a/titanic.css
+++ b/titanic.css
@@ -121,6 +121,10 @@ td
   color: #0d83e5;
 }
 
+img {
+  border-radius: 4px;
+}
+
 table {
   width: 100%;
   border-collapse: collapse; /* Fusionne les bordures des cellules */
